# pythonsample

./: azure-pipelines.yml  setup.cfg
src/: main.py
