[distutils]
index-servers =
    first-repository

[first-repository]
repository = [global]
index-url= https://pkgs.dev.azure.com/mjoshi25040908/pythonsample-maddy/_packaging/PythonSampleCodeFeed/pypi/simple/
username = azureuser
password = Password@2183


[metadata]
name = my_utils
version = 0.1
author = Madhusudan Joshi
author_email = m.joshi2504@gmail.com
description = A package containing [...]
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires=

[options.packages.find]
where = src